--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "minio": "^7.0.32"
+    "minio": "^7.0.32",
+    "mongoose": "^5.13.3",
+    "multer": "^1.4.5-lts.1",
+    "update": "^0.7.4",
+    "uuid": "^11.1.0"
   }
 }
