--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws4": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^3.0.3",
     "mime-types": "^2.1.35",
     "minio": "^7.0.32",
     "mongoose": "^5.13.3",
