--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "minio": "^7.0.32",
     "mongoose": "^5.13.3",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5",
     "update": "^0.7.4",
     "uuid": "^11.1.0"
   }
