--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "http-proxy-middleware": "^3.0.3",
     "mime-types": "^2.1.35",
     "minio": "^7.0.32",
